# self-tuning-agent

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  CLAUDE.md  Dockerfile  LICENSE  QA_ACCEPTANCE_REPORT.md  README.md  config.yaml  mypy.ini  pyproject.toml  ruff.toml
.claude/rules/: architecture.md  bug-prevention.md  coding-style.md  data-handling.md  testing.md
.github/workflows/: cd.yml  ci.yml
docs/: ERROR_HANDLING.md  PRODUCTION_HARDENING_PLAN.md
docs/superpowers/plans/: 2026-04-22-self-tunning-agent-implementation.md
docs/superpowers/specs/: 2026-04-21-self-tunning-agent-design.md
scripts/: auto_bug_detection.py  check_metrics_usage.py  check_retry_coverage.py
src/: __init__.py
src/agent/: runtime.py
src/common/: __init__.py  config.py  exceptions.py  logger.py  metrics.py  types.py
src/dataset/: __init__.py  builder.py  converter.py  quality_filter.py
src/evaluation/: aggregator.py  engine.py
src/harness/: __init__.py  ab_test.py  optimizer.py  orchestrator.py  trigger.py  version_manager.py
tests/: __init__.py  conftest.py  test_ab_test.py  test_circuit_breaker.py  test_metrics.py  test_retry_logic.py  test_token_tracking.py
tests/agent/: test_runtime.py  test_runtime_edge_cases.py
tests/common/: __init__.py  test_config.py  test_exceptions.py  test_logger.py  test_types.py
tests/dataset/: test_builder.py  test_converter.py
tests/evaluation/: test_engine.py
tests/harness/: test_optimizer.py  test_orchestrator.py  test_rollback.py  test_version_manager.py  test_version_manager_edge_cases.py  test_version_manager_errors.py
tests/integration/: test_concurrent_operations.py  test_end_to_end.py
tests/performance/: __init__.py  test_concurrent_requests.py
(+6 files in other folders)
