[project]
name = "self-tunning"
version = "0.1.0"
description = "Harness-based self-tuning QA agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.52.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]
